src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>G1_Obvious_Risks__c</fullName>
        <description>Gate 1: Fit - Obvious sustainability / compliance / country security risk</description>
        <inlineHelpText>Obvious sustainability / compliance / country security risk

Yes: Statement is true 
No: Statement is false</inlineHelpText>
        <label>Fit: Obvious Risks</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>G1_Project_Development__c</fullName>
        <description>Gate 1: Sales Pursuit --&gt; Project development, No risk of opportunity / project cancellation</description>
        <inlineHelpText>Will | End User | Project development, No risk of opportunity / project cancellation

Please rate each criteria according to the following scale: SA-strongly agree, A-Agree, N-Neutral, D-Disagree, SD- Strongly Disagree</inlineHelpText>
        <label>Will: Project Development</label>
        <picklist>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>G1_Realistic_Chance__c</fullName>
        <description>Gate 1: Sales Pursuit --&gt; Competition, ABB has realistic winning chances</description>
        <inlineHelpText>ABB has realistic winning chances against Competition

Please rate each criteria according to the following scale: SA-strongly agree, A-Agree, N-Neutral, D-Disagree, SD- Strongly Disagree</inlineHelpText>
        <label>Get: Chance To Win (Competition)</label>
        <picklist>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>G1_Ressources__c</fullName>
        <description>Gate 1: Fit - Sales Pursuit --&gt; Do we have local Sales (front end) resources close to the customer?</description>
        <inlineHelpText>Do we have local Sales (front end) resources close to the customer?

Yes: Statement is true
No: Statement is false</inlineHelpText>
        <label>Fit: Resources</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>G1_Strategy_LSU__c</fullName>
        <description>Gate 1: Sales Pursuit --&gt; Opportunity fits into the LBU strategy for the particular country</description>
        <inlineHelpText>Sales Pursuit --&gt; Opportunity fits into the LBU strategy for the particular country

Please rate each criteria according to the following scale: SA-strongly agree, A-Agree, N-Neutral, D-Disagree, SD- Strongly Disagree</inlineHelpText>
        <label>Fit: Strategy LSU</label>
        <picklist>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>G1_Strategy_PG__c</fullName>
        <description>Gate 1: Sales Pursuit --&gt; Opportunity fits the ABB (PG) product / system strategy and is in the target market segment</description>
        <inlineHelpText>Opportunity fits the ABB (PG) product / system strategy and is in the target market segment

Please rate each criteria according to the following scale: SA-strongly agree, A-Agree, N-Neutral, D-Disagree, SD- Strongly Disagree</inlineHelpText>
        <label>Fit: Strategy PG</label>
        <picklist>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>G1_Support_Needed__c</fullName>
        <description>Gate 1: Sales Pursuit --&gt; Customer Relation, The end user needs support to define the specifications</description>
        <inlineHelpText>The end user needs support to define the specifications

Please rate each criteria according to the following scale: SA-strongly agree, A-Agree, N-Neutral, D-Disagree, SD- Strongly Disagree</inlineHelpText>
        <label>Get: End User Support Needed</label>
        <picklist>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>G1_Will_Score__c</fullName>
        <description>Calculates individual scores of G1 Answers
[Value Answer / Individual Score] * [Individual weights] * [Group weights]</description>
        <formula>TEXT(ROUND(
CASE( G1_End_User__c , 
  &quot;SA&quot;, 100, 
  &quot;A&quot;, 75,
  &quot;N&quot;, 50,
  &quot;D&quot;, 25,
  0
) * 1 * 0.4

+

CASE( G1_Project_Development__c , 
  &quot;SA&quot;, 100, 
  &quot;A&quot;, 75,
  &quot;N&quot;, 50,
  &quot;D&quot;, 25,
  0
) * 1 * 0.5

+

CASE( G1_Business_Value_Bankabil__c , 
  &quot;SA&quot;, 100, 
  &quot;A&quot;, 75,
  &quot;N&quot;, 50,
  &quot;D&quot;, 25,
  0
) * 1 * 0.1, 0))</formula>
        <label>Will: Total Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2_End_User__c</fullName>
        <description>Gate 2 --&gt; End user well established and capable to develop the opportunity</description>
        <inlineHelpText>Will | End user | End user well established and capable to develop the opportunity?

Please rate each criteria according to the following scale: SA-strongly agree, A-Agree, N-Neutral, D-Disagree, SD- Strongly Disagree</inlineHelpText>
        <label>Will: End User</label>
        <picklist>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Get_Total_Score__c</fullName>
        <description>Calculates individual scores of G1 Answers 
[Value Answer / Individual Score] * [Individual weights] * [Group weights]</description>
        <formula>TEXT(

ROUND(

 (
  CASE( G1_Known_Customer__c ,
    &quot;SA&quot;, 100,
    &quot;A&quot;, 75,
    &quot;N&quot;, 50,
    &quot;D&quot;, 25,
    0
  ) * 0.2

  +

  CASE( G1_Customer_Relationship__c , 
    &quot;SA&quot;, 100, 
    &quot;A&quot;, 75,
    &quot;N&quot;, 50,
    &quot;D&quot;, 25,
    0
  ) * 0.4

  +

  CASE( G1_Support_Needed__c , 
    &quot;SA&quot;, 100, 
    &quot;A&quot;, 75,
    &quot;N&quot;, 50,
    &quot;D&quot;, 25,
    0
  ) * 0.4
 ) * 0.3

 + 

 (
  CASE( G1_Realistic_Chance__c , 
    &quot;SA&quot;, 100, 
    &quot;A&quot;, 75,
    &quot;N&quot;, 50,
    &quot;D&quot;, 25,
    0
  ) * 0.9

  +

  CASE( G1_Fulfill_Requirements__c , 
    &quot;SA&quot;, 100, 
    &quot;A&quot;, 75,
    &quot;N&quot;, 50,
    &quot;D&quot;, 25,
    0
  ) * 0.1
 ) * 0.7

,0)

)

&amp; 

IF(
 OR( 
  TEXT( G1_Realistic_Chance__c ) = &quot;SD&quot;,
  TEXT( G1_Realistic_Chance__c ) = &quot;D&quot;,
  TEXT( G1_Realistic_Chance__c ) = &quot;Unknown&quot;
 ),
 &quot; &quot; &amp; IMAGE (&quot;/img/samples/flag_red.gif&quot;, &quot;Status Red&quot;),
 &quot;&quot;
)</formula>
        <label>Get: Total Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <description>Percentage, field containing the gross margin</description>
        <label>Gross Margin (in %)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>If_any_PG_Regular__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R3 - If any PG Regular</description>
        <label>If any PG Regular</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry_Usage_Grouping__c</fullName>
        <description>for reporting on industry usage</description>
        <formula>IF( CONTAINS( TEXT( ABB_Industry_Usage_Level1__c),&quot;IND&quot;) , &quot;Industry&quot;, IF( CONTAINS( TEXT( ABB_Industry_Usage_Level1__c ),&quot;BLD&quot;) , &quot;Building&quot;,IF( CONTAINS( TEXT( ABB_Industry_Usage_Level1__c),&quot;TRA&quot;) , &quot;Transportation&quot;,IF( CONTAINS( TEXT( ABB_Industry_Usage_Level1__c),&quot;UT&quot;) , &quot;Utilities&quot;, IF( CONTAINS( TEXT( ABB_Industry_Usage_Level1__c),&quot;XY&quot;) , &quot;Usage Unknown&quot;,&quot;Other&quot;) ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>for reporting on industry usage</inlineHelpText>
        <label>Industry Usage Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Usage__c</fullName>
        <description>Picklist containing the Industry Usage Values</description>
        <label>Industry Usage</label>
        <picklist>
            <picklistValues>
                <fullName>BLD.10.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.15.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16.3.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16.3</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsRecordType_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R3v1 - Capture true value if recordtype changed on first time</description>
        <label>IsRecordType_Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Product_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R3 - Is Product Available</description>
        <label>Is Product Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Large_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox with a WFR associated to it. If an Opportunity value &gt;15m the checkbox is checked and that Opportunity = &apos;Large Business&apos;. If an Opportunity &lt;15m, the checkbox is unchecked and that Opportunity = &apos;Base Business&apos;. the WFR will on check upon record create.</description>
        <label>Large Business?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <description>Custom field to store lead number whenever a lead is converted</description>
        <label>Lead Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_TimeFrame__c</fullName>
        <description>R5 - Created as a part of Requirement 2341</description>
        <label>Lead TimeFrame</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Opportunity_ID__c</fullName>
        <description>Created as part of R5-2279</description>
        <externalId>true</externalId>
        <label>Legacy Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Business_Unit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Local Business Unit is the ABB management organisation responsible to market product, specific system or service mix either on division, BU or product group level. It is the local organisational unit, representing the BU&apos;s activities in a country.</inlineHelpText>
        <label>Leading LBU</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LBU_Code__c.Data_Load_Year__c</field>
                <operation>notEqual</operation>
                <value>2015</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>LBU_Code__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
<fields>
        <fullName>ABB_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Refers to the Sales, Project Execution or Manufacturing unit (Business Activity Location – BAL) that will lead the project in terms of final bid preparation towards the customer and that will book the order if we are awarded.</inlineHelpText>
        <label>ABB Location – Bidding unit</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
            <filterItems>
                <field>ABB_Location__c.Deleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Data_Load_Year__c</field>
                <operation>notEqual</operation>
                <value>2015</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.BU__c</field>
                <operation>notEqual</operation>
                <value>ZCCO, ZCRE, ZCVA</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.DIV__c</field>
                <operation>notEqual</operation>
                <value>ZC</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Activity__c</field>
                <operation>notEqual</operation>
                <value>Admin/Corporate, Other, R&amp;D, Warehouse or Logistics, Training</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Activity__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <infoMessage>Please use the filters to reduce the number of fields in the lookup window.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ABB_Location__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Product Group object</description>
        <label>Leading LPG</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_Group__c.Data_Load_Year__c</field>
                <operation>notEqual</operation>
                <value>2015</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Opportunities (Local Product Group)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Sales_Region__c</fullName>
        <description>created as part of R5</description>
        <label>Local Sales Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Sales_Territory__c</fullName>
        <description>created as part of R5</description>
        <label>Local Sales Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Opportunity_Owner__c</fullName>
        <description>This is a technical field, used in order to record the Main Opportunity Owner details, to be used in the notification template  Alternative Opportunity Closed.</description>
        <formula>IF(
 ISBLANK(Alternative_Opportunity_To__c),
 &quot; &quot;,
 Alternative_Opportunity_To__r.Owner.FirstName + &quot; &quot; + Alternative_Opportunity_To__r.Owner.LastName + &quot;,&quot;)</formula>
        <label>Main Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Reason_For_Close__c</fullName>
        <inlineHelpText>Please pick the main reason why this opportunity was closed</inlineHelpText>
        <label>Main Reason For Close</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>ABB only bidder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adherence to customer’s time schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bidding time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled alternative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial deviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercially unacceptable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created in Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Frame Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrity issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No financing in place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No installed base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No or bad track record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No permits in place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by customer after bidding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other preferred supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part of winning ABB package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price not competitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pursued by another ABB entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource availability constraint</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
	<fields>
        <fullName>Channel_Class_Level1__c</fullName>
        <description>R4.1 - New picklist field created to replace &quot;Channel class&quot; 
Picklist containing the values for differing ABB Channel Class.</description>
        <inlineHelpText>Channel classification of the Opportunity.</inlineHelpText>
        <label>Channel Class Level1</label>
        <picklist>
            <picklistValues>
                <fullName>ABBINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYIN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level2__c</fullName>
        <description>R4.1 - New dependent picklist field created for Channel Class Level1.
Picklist containing the values for differing ABB Channel Class.</description>
        <inlineHelpText>Channel Classification for Level 2 of Opportunity is Optional</inlineHelpText>
        <label>Channel Class Level2</label>
        <picklist>
            <controllingField>Channel_Class_Level1__c</controllingField>
            <picklistValues>
                <fullName>ALCEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APBLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PABL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINLB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINMB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Min_Product_Group_Threshold__c</fullName>
        <description>R3 - Opportunity Product Minimum Product Group Threshold in USD</description>
        <label>Min Product Group Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Margin__c</fullName>
        <description>Percentage, field containing the total net margin</description>
        <label>Net Margin (in %)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number_of_Activities__c</fullName>
        <description>This field is created for reports only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Age_in_Weeks__c</fullName>
        <description>This field is used on reports in Sales Dashboard</description>
        <formula>CEILING((TODAY() - DATEVALUE( CreatedDate ) )/7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Age (in Weeks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Migration_ID__c</fullName>
        <description>R3 - Migration Check Field.</description>
        <externalId>true</externalId>
        <label>Opportunity Migration ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <description>This is an auto generated identifier for all opportunities (unique, system-generated)</description>
        <displayFormat>OPP-{YY}-{0}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Unique Opportunity Identifier</inlineHelpText>
        <label>Opportunity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Qualification_Required__c</fullName>
        <description>R4 -  Opportunity Qualification required stage finding</description>
        <formula>IF(Product_Group__r.Opportunity_Qualification_Threshold_USD__c = 0,&apos;NO&apos;,IF(Technical_Amount_USD__c &gt; Product_Group__r.Opportunity_Qualification_Threshold_USD__c,&apos;YES&apos;,&apos;NO&apos;))</formula>
        <label>Opportunity Qualification Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Qualification_Status__c</fullName>
        <description>R4 - Gate 1 Status</description>
        <label>Opportunity Qualification (Gate1) Status</label>
        <picklist>
            <picklistValues>
                <fullName>BID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO BID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_RecordType__c</fullName>
        <description>R3- Opportunity Record Type Name. OOB field removed as the change option should not be available</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Screening_Gate_2_Status__c</fullName>
        <description>R4 - Gate 2 Status</description>
        <label>Tender Screening (Gate2) Status</label>
        <picklist>
            <picklistValues>
                <fullName>BID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO BID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Screening_Gate_3_Status__c</fullName>
        <label>Risk Profiling Status</label>
        <picklist>
            <picklistValues>
                <fullName>BID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO BID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <defaultValue>&quot;Opportunity record type will be converted to Regular or Fast Track if Opportunity Stage is “Opportunity Pursuit” and based on the opportunity value once PG is selected.&quot;</defaultValue>
        <description>R3v1 - Opportunity Type notification that push to add products</description>
        <label>Opportunity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>